# gfreenect-utils

./: Makefile.am  README  configure.ac
src/: Makefile.am  depth-file-viewer.c  take-shot.c
